# audiovideo

./: FFMPEG_PLAN.md  FFMPEG_TECHNICAL.md  ROADMAP.md  TECHNICAL.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/audio/video/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg_cmd.c  native-lib.c
app/src/main/java/com/audio/video/: MainActivity.kt
app/src/main/java/com/audio/video/data/model/: AudioTrack.kt  ExportConfig.kt  MediaItem.kt  Project.kt  TextOverlay.kt  TimelineState.kt  TransitionEffect.kt  VideoClip.kt
app/src/main/java/com/audio/video/data/repository/: MediaRepository.kt  ProjectRepository.kt
app/src/main/java/com/audio/video/editor/: AudioFadeCalculator.kt  AudioMixer.kt  FFTProcessor.kt  KeyframeAnalyzer.kt  LutParser.kt  ShaderFilterEffect.kt  SrtParser.kt  TimelineEngine.kt  VideoFilterShaders.kt  WaveformExtractor.kt
app/src/main/java/com/audio/video/editor/gl/: GLRendererDemo.kt
app/src/main/java/com/audio/video/export/: RawMediaCodecExporter.kt  VideoExportManager.kt
app/src/main/java/com/audio/video/ffmpeg/: FFmpegCommands.kt  FFmpegManager.kt  FFmpegNative.kt
app/src/main/java/com/audio/video/player/: PlayerState.kt  VideoPlayerManager.kt
app/src/main/java/com/audio/video/ui/navigation/: AppNavigation.kt
app/src/main/java/com/audio/video/ui/screen/editor/: EditorScreen.kt  EditorViewModel.kt
app/src/main/java/com/audio/video/ui/screen/export/: ExportScreen.kt  ExportViewModel.kt
app/src/main/java/com/audio/video/ui/screen/ffmpeglab/: FFmpegLabScreen.kt  FFmpegLabViewModel.kt
app/src/main/java/com/audio/video/ui/screen/gldemo/: GLDemoScreen.kt
app/src/main/java/com/audio/video/ui/screen/home/: HomeScreen.kt  HomeViewModel.kt
app/src/main/java/com/audio/video/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/com/audio/video/util/: TimeFormatUtils.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/audio/video/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_ffmpeg.sh
(+28 files in other folders)
